# taskmanager

./: README.md  db.sqlite3  manage.py  pyproject.toml
taskmanager_app/: admin.py  apps.py  custom_filters.py  forms.py  models.py  urls.py  utils.py  views.py
taskmanager_app/templates/: base.html
taskmanager_app/templates/taskmanager_app/: maincategory_list_view.html  maincategoryitem_confirm_delete.html  maincategoryitem_form.html  maincategoryitem_show.html  maincategoryitem_show_all.html  search_results.html  sorting_view.html  todo_list_view.html  todo_table_view.html  todoitem_confirm_delete.html  todoitem_form.html
taskmanager_app/templates/taskmanager_app/html_snippets/: dropdown_completed_state.html  dropdown_dates_state.html  dropdown_expand_item_state.html  dropdown_sort_by_date_state.html  filter_items_field.html  item_collapsible_content.html  list_item_loop.html  list_of_items.html  list_of_object_list.html  main_category_vertical_bar.html  tags_with_links.html  tags_without_links.html
taskmanager_project/: asgi.py  settings.py  urls.py  wsgi.py
